--- a/webapp/src/app/home/home.component.html
+++ b/webapp/src/app/home/home.component.html
@@ -1,4 +1,18 @@
 <div class="tab-content">
-    <h2>Home 🏰</h2>
-    <span>In this place you can feel safe to do whatever you want! 😃</span>
+    <div class="bg">
+        <div class="title-section">
+            <h1 class="home-title"><span>VIRTUAL LABS</span></h1>
+            <h2 class="home-subtitle">Easy and powerful cloud platform</h2>
+        </div>
+    </div>
+
+    <br/>
+    <br/>
+   <p class="home-description">Virtual labs is an interactive platform for managing virtual environments. You can easily get started too by signing up with your institutional email!<p>
+    <p class="home-description">You can immediately create a team with the other students in your courses and carry out the projects assigned by the professor with them.
+       All virtual machines are easy to create and manage thanks to the features offered by the platform. Your team's resources are limited, but don't worry!
+    The platform allows you to see how many resources are occupied by your team's virtual machines and how many resources you can still allocate.</p>
+
+    <p class="home-description">Thanks to the integrated section dedicated to assignments, you can easily manage the tasks assigned by the professor, you can also upload your solutions and check your assessments.</p>
+
 </div>
