--- a/webapp/src/app/home/home.component.css
+++ b/webapp/src/app/home/home.component.css
@@ -1,7 +1,7 @@
 
 .bg {
     /* The image used */
-    background-image: url("~src/assets/clouds_cropper.png");
+    background-image: url("../../assets/clouds_cropped.png");
     /* Full height */
     height: 550px;
     margin: -20px;
@@ -37,7 +37,7 @@ h2.home-subtitle {
     font-family: arial, Serif, serif !important;
 }
 span {
-    background: url(~src/assets/clouds_cropper.png) -20px -20px repeat;
+    background: url(../../assets/clouds_cropped.png) -20px -20px repeat;
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
     display:block;
