--- a/webapp/src/app/modals/new-course/new-course-dialog.component.html
+++ b/webapp/src/app/modals/new-course/new-course-dialog.component.html
@@ -10,7 +10,7 @@
               formControlName="acronym"
               required
       />
-      <mat-error>Please provide a valid Acronym</mat-error>
+      <mat-error>Please provide a valid Acronym (only capital letters)</mat-error>
     </mat-form-field>
 
     <mat-form-field class="full-width-input">
