--- a/webapp/src/app/modals/edit-course/edit-course-dialog.component.html
+++ b/webapp/src/app/modals/edit-course/edit-course-dialog.component.html
@@ -50,11 +50,11 @@
       <mat-list-item *ngFor="let professor of professors | async">
         {{ displayFn(professor) }}
         <button
-                mat-button
-                color="warn"
-                *ngIf="professor.id !== currentProfessorId"
                 (click)="removeProfessor(professor)"
-        >
+                *ngIf="professor.id !== currentProfessorId"
+                color="warn"
+                mat-button
+                type="button">
           Remove
         </button>
       </mat-list-item>
@@ -79,7 +79,7 @@
         </mat-option>
       </mat-autocomplete>
     </mat-form-field>
-    <button mat-button color="primary" (click)="addProfessor()">Add</button>
+    <button mat-button color="primary" (click)="addProfessor()" type="button">Add</button>
 
     <div mat-dialog-actions style="justify-content: center">
       <button mat-button mat-dialog-close color="warn">Close</button>
