--- a/webapp/src/app/modals/grade-dialog/grade-dialog.component.html
+++ b/webapp/src/app/modals/grade-dialog/grade-dialog.component.html
@@ -10,7 +10,7 @@
                    required/>
             <mat-error>Please provide a valid comment</mat-error>
         </mat-form-field>
-        <div mat-dialog-actions align="center">
+        <div mat-dialog-actions style="justify-content: center">
             <button mat-button color="warn" mat-dialog-close>Close</button>
             <button mat-button color="primary" [disabled]="form.invalid">Evaluate</button>
         </div>
