--- a/webapp/src/app/modals/login/login-dialog.component.html
+++ b/webapp/src/app/modals/login/login-dialog.component.html
@@ -22,7 +22,7 @@
       />
     </mat-form-field>
 
-    <div mat-dialog-actions align="end">
+    <div mat-dialog-actions style="text-align: center">
       <button mat-raised-button color="primary" [disabled]="form.invalid">Login</button>
       <button mat-button mat-dialog-close color="warn">Cancel</button>
     </div>
