--- a/webapp/src/app/home/home.component.css
+++ b/webapp/src/app/home/home.component.css
@@ -22,7 +22,7 @@ h1.home-title {
     overflow:hidden;
     display:inline-block;
     padding: 10px 20px;
-    margin-bottom: 0px;
+    margin-bottom: 0;
     font-weight:bold;
     font-family: arial, serif !important;
     color:transparent;
