--- a/webapp/src/app/modals/new-vm/new-vm.component.html
+++ b/webapp/src/app/modals/new-vm/new-vm.component.html
@@ -56,7 +56,7 @@
       </mat-checkbox>
     </label>
 
-    <div mat-dialog-actions align="end">
+    <div mat-dialog-actions style="justify-content: center">
       <button mat-raised-button color="primary" [disabled]="form.invalid">Create</button>
       <button mat-button color="warn" mat-dialog-close>Back</button>
     </div>
