--- a/webapp/src/app/modals/new-assignment-upload/new-assignment-upload-dialog.component.html
+++ b/webapp/src/app/modals/new-assignment-upload/new-assignment-upload-dialog.component.html
@@ -10,7 +10,7 @@
                    placeholder="Comment about your work"
                    formControlName="comment"
                    required/>
-            <mat-error>Please provide a valid comment</mat-error>
+            <mat-error>Please provide a valid comment (min: 2, max: 128)</mat-error>
         </mat-form-field>
 
         <mat-form-field class="full-width-input">
