--- a/webapp/src/app/modals/new-assignment/new-assignment-dialog.component.html
+++ b/webapp/src/app/modals/new-assignment/new-assignment-dialog.component.html
@@ -8,7 +8,7 @@
                    placeholder="Title"
                    formControlName="title"
                    required/>
-            <mat-error>Please provide a valid name</mat-error>
+            <mat-error>Please provide a valid name (min: 2, max: 32)</mat-error>
         </mat-form-field>
         <mat-form-field class="full-width-input">
             <ngx-mat-file-input
