--- a/webapp/src/app/modals/new-vm/new-vm.component.html
+++ b/webapp/src/app/modals/new-vm/new-vm.component.html
@@ -10,7 +10,7 @@
               formControlName="name"
               required
       />
-      <mat-error>Cannot be empty</mat-error>
+      <mat-error>Cannot be empty (max: 256)</mat-error>
     </mat-form-field>
 
     <label>CPUs:</label>
