--- a/webapp/src/app/modals/register/register-dialog.component.html
+++ b/webapp/src/app/modals/register/register-dialog.component.html
@@ -21,7 +21,7 @@
         formControlName="name"
         required
       />
-      <mat-error>Please provide a valid name</mat-error>
+      <mat-error>Please provide a valid name (min: 2, max: 32)</mat-error>
     </mat-form-field>
 
     <mat-form-field class="full-width-input">
@@ -32,7 +32,7 @@
         formControlName="surname"
         required
       />
-      <mat-error>Please provide a valid surname</mat-error>
+      <mat-error>Please provide a valid surname (min: 2, max: 32)</mat-error>
     </mat-form-field>
 
     <mat-form-field class="full-width-input">
@@ -56,7 +56,7 @@
       />
       <mat-error
         >Please provide a valid password (minLength: 8, 1 capital letter, 1
-        symbol)</mat-error
+        number)</mat-error
       >
     </mat-form-field>
 
