--- a/webapp/src/app/modals/edit-team-vm-options/edit-team-vm-options-dialog.component.html
+++ b/webapp/src/app/modals/edit-team-vm-options/edit-team-vm-options-dialog.component.html
@@ -64,7 +64,7 @@
                 (valueChange)='compareWithCurrentValue($event, "maxDiskStorage")'
         >
         </mat-slider>
-        <div mat-dialog-actions style="margin-bottom: 10px; text-align: center">
+        <div mat-dialog-actions style="margin-bottom: 10px; justify-content: center">
             <button mat-button mat-dialog-close color="warn">Close</button>
             <button mat-button color="primary" [disabled]="form.invalid">Edit</button>
         </div>
